tests/ui/imports/import-after-macro-expand-14.stderr
error: `HeaderMap` is ambiguous
  --> $DIR/import-after-macro-expand-14.rs:1:15
   |
LL | use crate::a::HeaderMap;
   |               ^^^^^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `HeaderMap` could refer to the struct imported here
  --> $DIR/import-after-macro-expand-14.rs:17:13
   |
LL |     pub use crate::b::*;
   |             ^^^^^^^^^^^
   = help: consider adding an explicit import of `HeaderMap` to disambiguate
note: `HeaderMap` could also refer to the struct imported here
  --> $DIR/import-after-macro-expand-14.rs:17:13
   |
LL |     pub use crate::b::*;
   |             ^^^^^^^^^^^
   = help: consider adding an explicit import of `HeaderMap` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

error: `HeaderMap` is ambiguous
  --> $DIR/import-after-macro-expand-14.rs:21:34
   |
LL |     let h: crate::b::HeaderMap = HeaderMap;
   |                                  ^^^^^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `HeaderMap` could refer to the unit struct imported here
  --> $DIR/import-after-macro-expand-14.rs:17:13
   |
LL |     pub use crate::b::*;
   |             ^^^^^^^^^^^
   = help: consider adding an explicit import of `HeaderMap` to disambiguate
note: `HeaderMap` could also refer to the unit struct imported here
  --> $DIR/import-after-macro-expand-14.rs:17:13
   |
LL |     pub use crate::b::*;
   |             ^^^^^^^^^^^
   = help: consider adding an explicit import of `HeaderMap` to disambiguate

error: aborting due to 2 previous errors

Future incompatibility report: Future breakage diagnostic:
error: `HeaderMap` is ambiguous
  --> $DIR/import-after-macro-expand-14.rs:1:15
   |
LL | use crate::a::HeaderMap;
   |               ^^^^^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `HeaderMap` could refer to the struct imported here
  --> $DIR/import-after-macro-expand-14.rs:17:13
   |
LL |     pub use crate::b::*;
   |             ^^^^^^^^^^^
   = help: consider adding an explicit import of `HeaderMap` to disambiguate
note: `HeaderMap` could also refer to the struct imported here
  --> $DIR/import-after-macro-expand-14.rs:17:13
   |
LL |     pub use crate::b::*;
   |             ^^^^^^^^^^^
   = help: consider adding an explicit import of `HeaderMap` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

Future breakage diagnostic:
error: `HeaderMap` is ambiguous
  --> $DIR/import-after-macro-expand-14.rs:21:34
   |
LL |     let h: crate::b::HeaderMap = HeaderMap;
   |                                  ^^^^^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `HeaderMap` could refer to the unit struct imported here
  --> $DIR/import-after-macro-expand-14.rs:17:13
   |
LL |     pub use crate::b::*;
   |             ^^^^^^^^^^^
   = help: consider adding an explicit import of `HeaderMap` to disambiguate
note: `HeaderMap` could also refer to the unit struct imported here
  --> $DIR/import-after-macro-expand-14.rs:17:13
   |
LL |     pub use crate::b::*;
   |             ^^^^^^^^^^^
   = help: consider adding an explicit import of `HeaderMap` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

